# pop

./: .gitignore  README.md  dp.py  greedy_enriched.csv  main.py  pyproject.toml  run.py
docs/: docs.tex
dp/: bottom_up.py  top_down.py
ga/: crossover.py  genetic_algorithm.py  main.py  mutation.py  q.py  reproduction.py  succession.py  type_definitions.py  unit.py
greedy/: main.py
results/: astar.csv  dynamic-bottom-up.csv  dynamic-top-down.csv
results/card-number/board_configs/: board_configs.json
results/card-number/logs/: greedy-0.csv  greedy-1.csv  greedy-10.csv  greedy-11.csv  greedy-17.csv  greedy-20.csv  greedy-21.csv  greedy-29.csv  (+13 more)
sa/: board_state.py  heuristic.py  neighbor_generator.py  neighbor_selection_func.py  simulated_annealing.py
src/: main.py  settings.py
src/astar/: astar.py  astar_performance.py  heuristic.py  main.py  state.py  success_generator.py
src/dp/: bottom_up.py  top_down.py  types.py
src/experiment/: config.py  distribution.py  non_deterministic_result_maker.py  plotter.py  result_aggregator.py  runner.py  settings.py  table_builder.py
src/ga/: crossover.py  genetic_algorithm.py  mutation.py  q.py  reproduction.py  succession.py  type_definitions.py  unit.py
src/greedy/: greedy_and_repair.py  greedy_fill.py  successor_generator.py
src/sa/: board_state.py  greedy.py  greedy_and_repair.py  heuristic.py  neighbor_generator.py  simulated_annealing.py  successor_generator.py
src/test/: test_algorithms.py  test_dp.py
src/util/: time_measure.py  types.py  util.py
test/: test_dp.py
util/: types.py  util.py
(+127 files in other folders)
