[project]
name = "pop"
version = "0.1.0"
description = "Search and optimization project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100 
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251219",
]
